fixed wrap in table cell for non-ascii, made last table column 100% width, add pause button (fixes #24)

--- a/css/wisegui.css
+++ b/css/wisegui.css
@@ -170,7 +170,7 @@ input.success {
 	width: auto;
 }
 
-.WiseGuiExperimentViewOutputsTable thead tr:last-child {
+.WiseGuiExperimentViewOutputsTable thead th:last-child {
 	width: 100%;
 }
 
